--- a/ru/articles/2025/05/1748443482905_6716/zone.example.org
+++ b/ru/articles/2025/05/1748443482905_6716/zone.example.org
@@ -19,6 +19,6 @@ www                 IN  CNAME   @
 @                   IN  MX  10  mail.example.org.
 mail                IN  A       192.168.1.6
 ; TXT
-@                   IN  TXT     "v=spf1 ip4:192.168.1.6 ~all"
+@                   IN  TXT     "v=spf1 ip4:192.168.1.6 -all"
 _dmarc              IN  TXT     "v=DMARC1; p=none; rua=mailto:postmaster@example.org; ruf=mailto:postmaster@example.org; adkim=r; aspf=r"
 dkim._domainkey     IN  TXT     "v=DKIM1; p=TOKEN"
